--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 PORT = 8008
-mongoURI = "mongodb+srv://muhammadjahanzeb:mongodb123@jahanzebcluster.0hixht5.mongodb.net/booking?retryWrites=true&w=majority"
+# mongoURI = "mongodb+srv://muhammadjahanzeb:mongodb123@jahanzebcluster.0hixht5.mongodb.net/booking?retryWrites=true&w=majority"
+
+mongoURI = "mongodb+srv://jozi:mongodb123@bookingapp.lj4qo.mongodb.net/?retryWrites=true&w=majority&appName=bookingApp"
+
 JWT = 'jozi123'
